--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -6,12 +6,11 @@
 }
 
 .hero-information-container {
-  background: aquamarine;
+  background: #facbd7;
   min-height: 25vh;
 }
 
 .hero-image-container {
-  background: yellow;
   display: grid;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(32, 1fr);
@@ -19,16 +18,19 @@
 }
 
 /* Gridding for the colors the left pane*/
+.hero-image-1st-upperbox {
+  grid-column: 1/-1;
+  grid-row: 1/-1;
+}
+
 .hero-image-1st-lowerbox {
   grid-column: 1/9;
   grid-row: 22/-1;
-  background: purple;
 }
 
 .hero-image-2nd-lowerbox {
   grid-column: 9/-1;
   grid-row: 22/-1;
-  background: black;
 }
 
 .hero-image-box {
@@ -40,9 +42,11 @@
 
 .hero-image {
   width: 100%;
-  height: 100%;
+  max-width: 400px;
+  min-width: 280px;
   object-fit: contain;
   border-radius: 20px;
+  overflow: "hidden";
 }
 
 /* Responsive design for the image */
@@ -52,17 +56,21 @@
     grid-template-columns: 1fr;
   }
 
-  .hero-image-box {
-    grid-column: 4/13;
-    grid-row: 7/-1;
-  }
-
   .hero-information-container {
     height: 25vh;
   }
 
   .hero-image-container {
     height: 75vh;
+  }
+
+  .hero-image-box {
+    grid-column: 3/13;
+    grid-row: 7/-1;
+  }
+
+  .hero-image {
+    min-width: 0px;
   }
 }
 @media only screen and (max-width: 800px) and (min-height: 741px) and (max-height: 900px) {
@@ -71,17 +79,21 @@
     grid-template-columns: 1fr;
   }
 
-  .hero-image-box {
-    grid-column: 3/14;
-    grid-row: 7/-1;
-  }
-
   .hero-information-container {
     height: 25vh;
   }
 
   .hero-image-container {
     height: 75vh;
+  }
+
+  .hero-image-box {
+    grid-column: 3/14;
+    grid-row: 7/-1;
+  }
+
+  .hero-image {
+    min-width: 0px;
   }
 }
 
@@ -91,17 +103,17 @@
     grid-template-columns: 1fr;
   }
 
-  .hero-image-box {
-    grid-column: 6/12;
-    grid-row: 7/-1;
-  }
-
   .hero-information-container {
     height: 25vh;
   }
 
   .hero-image-container {
     height: 75vh;
+  }
+
+  .hero-image-box {
+    grid-column: 6/12;
+    grid-row: 7/-1;
   }
 }
 
