Changed header styles to white boxes

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -41,3 +41,13 @@
 .header-cart-icon {
   justify-content: flex-end;
 }
+
+.text-menu {
+  height: 30px;
+  display: flex;
+  align-items: center;
+  border-style: solid;
+  border: 1px solid white;
+  padding-left: 10px;
+  padding: 5px 10px;
+}
