--- a/src/app.css
+++ b/src/app.css
@@ -25,6 +25,10 @@ body {
     height: 20px;
   }
 
+  .icon-small {
+    height: 10px;
+  }
+
   .mr-1 {
     margin-right: 10px;
   }
@@ -43,6 +47,10 @@ body {
     height: 25px;
   }
 
+  .icon-small {
+    height: 10px;
+  }
+
   .mr-1 {
     margin-right: 15px;
   }
@@ -58,7 +66,7 @@ body {
 }
 
 .base-header-container {
-  background-color: rgba(0, 0, 0, 0.582);
+  /* background-color: rgba(0, 0, 0, 0.582); */
   color: white;
   height: 70px;
   width: 100vw;
