--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,4 +1,4 @@
-/* Parent Ctonainer */
+/* Parent Container */
 .hero-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -7,7 +7,7 @@
 .hero-information-container {
   background: #facbd7;
   min-height: 25vh;
-  max-height: 1000px;
+  max-height: 900px;
   min-height: 500px;
 }
 
@@ -16,7 +16,7 @@
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(32, 1fr);
   max-height: 100vh;
-  max-height: 1000px;
+  max-height: 900px;
   min-height: 500px;
 }
 
@@ -56,31 +56,140 @@
 
 /* Related with information Showcase */
 
-.hero-information-container {
+.hero-information-container-2 {
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: repeat(20, 1fr);
+  grid-template-rows: repeat(20, 1fr);
   height: 100vh;
+  max-height: 900px;
   width: 50vw;
+  min-width: 4s00px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  color: #343969;
 }
 
-.information-title {
-  background: blue;
-  grid-column: 2/10;
-  grid-row: 4/6;
+.information-container-top {
+  /* background: rgba(255, 255, 255, 0.432); */
+  grid-column: 2/20;
+  grid-row: 8/17;
 }
 
 .information-description {
-  background: yellow;
-  grid-column: 2/10;
-  grid-row: 6/8;
+  display: flex;
 }
 
 .information-cart {
   background: green;
   grid-column: 1/-1;
-  grid-row: 9/-1;
+  grid-row: 18/-1;
 }
+
+/* Related with the specific titles, etc */
+.information-title-1 {
+  width: 150px;
+  padding: 0px 30px;
+  border: 1px solid #343969;
+  border-bottom: transparent;
+  margin-left: 55%;
+  transform: translateX(-50%);
+  font-size: 2rem;
+  font-family: "Six Caps", sans-serif;
+}
+
+.information-title-2 {
+  min-width: 300px;
+  max-width: 350px;
+  min-height: 150px;
+  border: 1px solid #343969;
+  border-bottom: transparent;
+  max-width: 100%;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+}
+
+.information-title-2 > h1 {
+  flex: 1;
+  min-width: inherit;
+  font-size: 6rem;
+  font-family: "Anton", sans-serif;
+}
+
+.information-description {
+  display: flex;
+  justify-content: center;
+  min-height: 200px;
+}
+
+.information-description-1 {
+  min-width: 100px;
+  max-width: 400px;
+  min-height: 120px;
+  border: 1px solid #343969;
+  text-align: center;
+  padding: 35px 10px;
+  font-size: 1.5rem;
+  font-family: "Open Sans Condensed", sans-serif;
+}
+
+.information-description-2 {
+  display: flex;
+  min-width: 150px;
+  min-height: 40px;
+}
+
+.center-flex {
+  display: flex;
+  align-items: center;
+  align-content: center;
+}
+
+.information-description-2 > div {
+  display: flex;
+  min-width: 80px;
+  max-width: 100px;
+  border: 1px solid #343969;
+  justify-content: center;
+  align-items: center;
+  border-left: transparent;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 15px 0;
+}
+
+.information-description-2 > div > h1 {
+  font-size: 1.4rem;
+  font-family: "Anton", sans-serif;
+}
+
+.information-description-2 > div > p {
+  flex: 1;
+  min-width: 80px;
+}
+
+.information-description-3 {
+  display: flex;
+  min-height: 42px;
+  max-width: 80px;
+  border: 1px solid #343969;
+  border-top: transparent;
+  border-left: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.information-description-3 > p {
+  text-align: center;
+  font-size: 10px;
+}
+/* .information-description-2 {
+  display: flex;
+} */
 /* Responsive design for the image */
 @media screen and (max-width: 800px) and (max-height: 700px) {
   /* Phone that's not so tall */
@@ -108,7 +217,7 @@
 }
 /* Responsive queries */
 @media only screen and (max-width: 800px) and (min-height: 700px) and (max-height: 900px) {
-  /* Phone that's tall like iphone X*/
+  /* Phone that's tall like iphone X, iphone +*/
   .hero-container {
     grid-template-columns: 1fr;
   }
@@ -129,6 +238,16 @@
 
   .hero-image {
     min-width: 0px;
+  }
+
+  .information-top {
+    grid-column: 1/-1;
+    grid-row: 3/8;
+  }
+
+  .information-cart {
+    grid-column: 1/-1;
+    grid-row: 1/3;
   }
 }
 
