--- a/src/app.css
+++ b/src/app.css
@@ -2,14 +2,34 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 h1,
 h2,
 h3,
 h4 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Anton", sans-serif;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 3rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+p {
+  font-family: "Open Sans Condensed", sans-serif;
+}
+
+.p2 {
+  font-size: 2rem;
 }
 
 body {
@@ -60,10 +80,21 @@ body {
   }
 }
 
-.base-container {
+/* .base-container {
   display: grid;
-  height: 100vh;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 }
+
+.hero-grid {
+  grid-column: 1/-1;
+  grid-row: 2/-1;
+}
+
+.hero-grid-2 {
+  grid-column: 1/-1;
+  grid-row: 1/-1;
+} */
 
 .base-header-container {
   /* background-color: rgba(0, 0, 0, 0.582); */
