--- a/src/app.css
+++ b/src/app.css
@@ -36,6 +36,11 @@ body {
   font-family: "Lato", sans-serif;
 }
 
+.relative {
+  position: relative;
+  z-index: -1;
+}
+
 @media only screen and (max-width: 600px) {
   .main-logo {
     height: 25px;
