--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,15 +1,16 @@
 /* Parent Container */
 .hero-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
   grid-template-rows: 1fr 1fr;
-  height: 900px;
-  background-color: black;
+  height: 100vh;
+  max-height: 800px;
 }
 
-.hero-image-container {
+.hero-background-container {
   display: grid;
-  height: 900px;
+  height: 100vh;
+  max-height: 800px;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(32, 1fr);
 }
@@ -21,29 +22,39 @@
   text-align: center;
   color: #343969;
   background: #facbd7;
-
-  height: 900px;
+  height: 100vh;
+  max-height: 800px;
 }
 
-/* Related with product showcase */
+.hero-image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Related with background */
 /* Gridding for the colors the left pane*/
 
-.hero-image-1st-upperbox {
+.hero-background-1st-upperbox {
   grid-column: 1/-1;
   grid-row: 1/-1;
 }
 
-.hero-image-1st-lowerbox {
+.hero-background-1st-lowerbox {
   grid-column: 1/9;
   grid-row: 22/-1;
 }
 
-.hero-image-2nd-lowerbox {
+.hero-background-2nd-lowerbox {
   grid-column: 9/-1;
   grid-row: 22/-1;
 }
 
-.hero-image-box {
+.hero-background-box {
   grid-column: 5/12;
   grid-row: 7/-1;
 }
@@ -51,12 +62,9 @@
 /* Image Relates */
 
 .hero-image {
-  width: 100%;
-  max-width: 300px;
-  min-width: 280px;
-  object-fit: contain;
+  max-height: 550px;
   border-radius: 20px;
-  overflow: "hidden";
+  padding-top: 50px;
 }
 
 /* Related with information Showcase */
@@ -236,7 +244,7 @@
     width: 100vw;
   }
 
-  .hero-image-container {
+  .hero-background-container {
     height: 75vh;
   }
 
@@ -246,7 +254,7 @@
   }
 
   .hero-image {
-    min-width: 0px;
+    width: 230px;
   }
 }
 /* Responsive queries */
@@ -261,7 +269,7 @@
     width: 100vw;
   }
 
-  .hero-image-container {
+  .hero-background-container {
     height: 75vh;
   }
 
@@ -283,6 +291,10 @@
     grid-column: 1/-1;
     grid-row: 1/3;
   }
+
+  .hero-image {
+    width: 230px;
+  }
 }
 
 @media only screen and (max-width: 800px) and (min-height: 850px) {
@@ -296,28 +308,34 @@
     width: 100vw;
   }
 
-  .hero-image-container {
+  .hero-background-container {
     height: 75vh;
   }
 
-  .hero-image-box {
-    grid-column: 6/12;
-    grid-row: 7/-1;
+  .hero-image {
+    width: 300px;
   }
 }
 
 @media screen and (min-width: 801px) and (max-width: 1150px) {
   /* Destkop Width Responsive */
 
-  .hero-image-box {
-    grid-column: 4/14;
-    grid-row: 7/-1;
+  .hero-container {
+    /* grid-template-columns: 1fr; */
+  }
+
+  .hero-information-container {
+    /* grid-row: 1/-1;
+    grid-column: 2/2; */
+  }
+  .hero-background-container {
+    /* grid-column: 1/2; */
   }
 }
 
 @media screen and (min-width: 801px) and (min-height: 851px) {
-  .hero-image {
+  /* .hero-image {
     max-width: 500px;
     min-width: 300px;
-  }
+  } */
 }
