--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,16 +1,12 @@
 /* Parent Container */
 .hero-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(520px, 1fr));
   grid-template-rows: 1fr 1fr;
-  height: 100vh;
-  max-height: 800px;
 }
 
 .hero-background-container {
   display: grid;
-  height: 100vh;
-  max-height: 800px;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(32, 1fr);
 }
@@ -22,8 +18,6 @@
   text-align: center;
   color: #343969;
   background: #facbd7;
-  height: 100vh;
-  max-height: 800px;
 }
 
 .hero-image-container {
@@ -34,6 +28,12 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+
+.hero-background-container,
+.hero-information-container {
+  height: 100vh;
+  max-height: 800px;
 }
 
 /* Related with background */
@@ -72,7 +72,7 @@
 .information-container-top {
   /* background: rgba(255, 255, 255, 0.432); */
   grid-column: 2/20;
-  grid-row: 6/17;
+  grid-row: 5/16;
 }
 
 .information-description {
@@ -85,15 +85,13 @@
   padding: 0px 30px;
   border: 1px solid #343969;
   border-bottom: transparent;
-  margin-left: 55%;
+  margin-left: 65%;
   transform: translateX(-50%);
-  font-size: 2rem;
   font-family: "Six Caps", sans-serif;
 }
 
 .information-title-2 {
-  min-width: 350px;
-  max-width: 350px;
+  width: 480px;
   min-height: 150px;
   border: 1px solid #343969;
   border-bottom: transparent;
@@ -120,11 +118,10 @@
 .information-description-1 {
   min-width: 100px;
   max-width: 400px;
-  min-height: 120px;
   border: 1px solid #343969;
   text-align: center;
   padding: 35px 10px;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-family: "Open Sans Condensed", sans-serif;
 }
 
@@ -153,10 +150,6 @@
   padding: 15px 0;
 }
 
-.information-description-2 > div > h1 {
-  font-size: 1.5rem;
-}
-
 .information-description-2 > div > p {
   flex: 1;
   min-width: 80px;
@@ -167,8 +160,8 @@
   min-height: 42px;
   max-width: 80px;
   border: 1px solid #343969;
+  margin-left: -1px;
   border-top: transparent;
-  border-left: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -199,8 +192,6 @@
 
 .information-cart-1 {
   color: 343969;
-  font-size: 3rem;
-  font-family: "Open Sans Condensed", sans-serif;
   margin-left: 10%;
 }
 
@@ -225,9 +216,6 @@
   justify-content: center;
 }
 
-.information-cart-3 > p {
-  font-size: 2rem;
-}
 .information-cart > div {
   display: flex;
 }
@@ -304,38 +292,20 @@
   }
 
   .hero-information-container {
-    height: 50vh;
-    width: 100vw;
+    height: 600px;
   }
 
-  .hero-background-container {
-    height: 75vh;
-  }
-
-  .hero-image {
-    width: 300px;
+  .information-container-top {
+    /* background: rgba(255, 255, 255, 0.432); */
+    grid-column: 2/20;
+    grid-row: 2/16;
   }
 }
 
-@media screen and (min-width: 801px) and (max-width: 1150px) {
+@media screen and (min-width: 1024px) {
   /* Destkop Width Responsive */
-
-  .hero-container {
-    /* grid-template-columns: 1fr; */
-  }
-
-  .hero-information-container {
-    /* grid-row: 1/-1;
-    grid-column: 2/2; */
-  }
-  .hero-background-container {
-    /* grid-column: 1/2; */
-  }
 }
 
-@media screen and (min-width: 801px) and (min-height: 851px) {
-  /* .hero-image {
-    max-width: 500px;
-    min-width: 300px;
-  } */
+@media screen and (min-width: 901px) and (min-height: 851px) {
+  /* Destkop With So Much Height */
 }
