--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,8 +1,7 @@
 /* Parent Container */
 .hero-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(520px, 1fr));
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(550px, 1fr));
 }
 
 .hero-background-container {
@@ -33,7 +32,8 @@
 .hero-background-container,
 .hero-information-container {
   height: 100vh;
-  max-height: 800px;
+  max-height: 850px;
+  min-height: 600px;
 }
 
 /* Related with background */
@@ -70,13 +70,8 @@
 /* Related with information Showcase */
 
 .information-container-top {
-  /* background: rgba(255, 255, 255, 0.432); */
   grid-column: 2/20;
   grid-row: 5/16;
-}
-
-.information-description {
-  display: flex;
 }
 
 /* Related with the specific titles, etc */
@@ -85,13 +80,13 @@
   padding: 0px 30px;
   border: 1px solid #343969;
   border-bottom: transparent;
-  margin-left: 65%;
+  margin-left: 50%;
   transform: translateX(-50%);
   font-family: "Six Caps", sans-serif;
 }
 
 .information-title-2 {
-  width: 480px;
+  min-width: 280px;
   min-height: 150px;
   border: 1px solid #343969;
   border-bottom: transparent;
@@ -106,70 +101,58 @@
 .information-title-2 > h1 {
   flex: 1;
   min-width: inherit;
-  font-size: 6rem;
+  font-size: 4rem;
 }
 
 .information-description {
   display: flex;
   justify-content: center;
-  min-height: 200px;
+  flex-wrap: wrap;
 }
 
-.information-description-1 {
-  min-width: 100px;
+.information-description-1 > p {
   max-width: 400px;
   border: 1px solid #343969;
   text-align: center;
   padding: 35px 10px;
   font-size: 1.2rem;
   font-family: "Open Sans Condensed", sans-serif;
+  margin-bottom: -1px;
 }
 
 .information-description-2 {
   display: flex;
-  min-width: 150px;
-  min-height: 40px;
 }
 
-.center-flex {
-  display: flex;
-  align-items: center;
-  align-content: center;
-}
-
-.information-description-2 > div {
+.information-description-tam {
   display: flex;
   min-width: 80px;
   max-width: 100px;
   border: 1px solid #343969;
   justify-content: center;
   align-items: center;
-  border-left: transparent;
+  margin-left: -1px;
   display: flex;
   flex-wrap: wrap;
   padding: 15px 0;
 }
 
-.information-description-2 > div > p {
+.information-description-tam > p {
   flex: 1;
   min-width: 80px;
 }
 
 .information-description-3 {
-  display: flex;
   min-height: 42px;
-  max-width: 80px;
-  border: 1px solid #343969;
+  width: 250px;
   margin-left: -1px;
+  border: 1px solid #343969;
   border-top: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.information-description-3 > p {
-  text-align: center;
-  font-size: 10px;
+  margin-left: 50%;
+  transform: translateX(-50%);
 }
 
 /* Cart Related Images  */
@@ -221,91 +204,93 @@
 }
 
 /* Responsive design for the image */
-@media screen and (max-width: 800px) and (max-height: 700px) {
+@media screen and (max-width: 750px) and (max-height: 700px) {
   /* Phone that's not so tall */
   .hero-container {
     grid-template-columns: 1fr;
   }
 
   .hero-information-container {
-    height: 25vh;
-    width: 100vw;
+    height: 650px;
   }
 
   .hero-background-container {
-    height: 75vh;
-  }
-
-  .hero-image-box {
-    grid-column: 5/13;
-    grid-row: 7/-1;
+    height: 500px;
   }
 
   .hero-image {
-    width: 230px;
+    width: 220px;
+  }
+
+  .information-container-top {
+    grid-column: 2/20;
+    grid-row: 2/16;
   }
 }
 /* Responsive queries */
-@media only screen and (max-width: 800px) and (min-height: 700px) and (max-height: 900px) {
+@media only screen and (max-width: 750px) and (min-height: 700px) and (max-height: 900px) {
   /* Phone that's tall like iphone X, iphone +*/
   .hero-container {
     grid-template-columns: 1fr;
   }
 
-  .hero-information-container {
-    height: 50vh;
-    width: 100vw;
-  }
-
   .hero-background-container {
     height: 75vh;
   }
 
-  .hero-image-box {
-    grid-column: 5/13;
-    grid-row: 7/-1;
+  .hero-information-container {
+    height: 650px;
+  }
+
+  .information-container-top {
+    grid-column: 2/20;
+    grid-row: 3/16;
   }
 
   .hero-image {
-    min-width: 0px;
-  }
-
-  .information-top {
-    grid-column: 1/-1;
-    grid-row: 3/8;
-  }
-
-  .information-cart {
-    grid-column: 1/-1;
-    grid-row: 1/3;
-  }
-
-  .hero-image {
-    width: 230px;
+    width: 240px;
   }
 }
 
-@media only screen and (max-width: 800px) and (min-height: 850px) {
-  /* Ipad */
-  .hero-container {
-    grid-template-columns: 1fr;
+@media screen and (min-width: 751px) {
+  /* Destkop Width & Ipad */
+  .information-description {
+    flex-wrap: nowrap;
   }
 
+  .information-description-3 {
+    min-height: 42px;
+    max-width: 160px;
+    border: 1px solid #343969;
+    border-top: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: -1px;
+    transform: translateX(0%);
+  }
+
+  .information-title-1 {
+    width: 150px;
+    padding: 0px 30px;
+    border: 1px solid #343969;
+    border-bottom: transparent;
+    font-family: "Six Caps", sans-serif;
+  }
+}
+
+@media only screen and (min-width: 751px) and (max-width: 1100px) {
+  /* Destkop Width Responsive For Grid Changes*/
   .hero-information-container {
     height: 600px;
   }
 
   .information-container-top {
-    /* background: rgba(255, 255, 255, 0.432); */
     grid-column: 2/20;
-    grid-row: 2/16;
+    grid-row: 3/16;
   }
-}
 
-@media screen and (min-width: 1024px) {
-  /* Destkop Width Responsive */
-}
-
-@media screen and (min-width: 901px) and (min-height: 851px) {
-  /* Destkop With So Much Height */
+  .hero-container {
+    height: 100%;
+  }
 }
