--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -2,6 +2,8 @@
 .hero-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(550px, 1fr));
+  width: 100vw;
+  overflow: hidden;
 }
 
 .hero-background-container {
