--- a/src/app.css
+++ b/src/app.css
@@ -5,11 +5,23 @@
   font-size: 16px;
 }
 
+.font1 {
+  font-family: "Open Sans Condensed", sans-serif;
+}
+
+.font2 {
+  font-family: "Anton", sans-serif;
+}
+
 h1,
 h2,
 h3,
 h4 {
-  font-family: "Anton", sans-serif;
+  font-family: "Sora", sans-serif;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
 }
 
 h1 {
@@ -26,10 +38,6 @@ h3 {
 
 h4 {
   font-size: 1.3rem;
-}
-
-p {
-  font-family: "Open Sans Condensed", sans-serif;
 }
 
 .p2 {
@@ -50,12 +58,28 @@ body {
 }
 
 .flex-center {
+  display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .wrap {
   flex-wrap: wrap;
+}
+
+.base-header-container {
+  /* background-color: rgba(0, 0, 0, 0.582); */
+  color: white;
+  height: 70px;
+  width: 100vw;
+  position: fixed;
+}
+
+.button {
+  background-color: #343969;
+  color: white;
+  border: 0px;
+  padding: 10px 20px;
 }
 
 @media only screen and (max-width: 800px) {
@@ -81,6 +105,10 @@ body {
   .ml-1 {
     margin-left: 10px;
   }
+
+  /* .button {
+    padding: 5px 15px;
+  } */
 }
 
 @media only screen and (min-width: 801px) {
@@ -103,19 +131,4 @@ body {
   .ml-1 {
     margin-left: 15px;
   }
-}
-
-.base-header-container {
-  /* background-color: rgba(0, 0, 0, 0.582); */
-  color: white;
-  height: 70px;
-  width: 100vw;
-  position: fixed;
-}
-
-.button {
-  background-color: #343969;
-  color: white;
-  border: 0px;
-  padding: 10px 20px;
 }
