--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -8,6 +8,7 @@
   /* background-image: url(../../media/background/bg-white.png); */
   object-fit: cover;
   padding: 0% 10%;
+  overflow: hidden;
 }
 .banner-pot-container {
 }
