Removed the searchbar when widht is reduced

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -50,3 +50,10 @@
   padding-left: 10px;
   padding: 5px 10px;
 }
+
+
+@media screen and (max-width: 1100px)  {
+  .header-menu-list{
+    display: none;
+  }
+}
